add translations for booking

--- a/app/templates/order/booking_success.hbs
+++ b/app/templates/order/booking_success.hbs
@@ -3,7 +3,7 @@
     <section class="main-section new-user-section ui login_page">
       <nav class="tab-bar">
         <section class="middle tab-bar-section">
-          <h1 class="title"> Success! </h1>
+          <h1 class="title"> {{t "order.booking_success.success"}} </h1>
         </section>
       </nav>
     </section>
@@ -12,7 +12,7 @@
 
 <section class="main-section client-information">
   <div class="small-12 columns type-of-id-text">
-    Reference Number
+    {{t "order.booking_success.reference_number"}} 
   </div>
   <br>
   <div class="row time_inputs id-type-radio-input" >
@@ -22,7 +22,7 @@
   </div>
 
   <div class="small-12 medium-9 large-4 columns type-of-id-text">
-    Reference Number
+    {{t "order.booking_success.status"}} 
   </div>
   <br>
 
@@ -34,14 +34,13 @@
 
   <div class="row">
     <div class="small-12 columns type-of-id-text">
-      What happens now?
+      {{t "order.booking_success.what_happen_after_booking"}} 
     </div>
 
     <div class="small-12 columns id-confidential-text">
-      Our staff will soon start checking the details and may contact you and/or beneficiery to clarify.
-      If everything is okay then the order will be marked confirmed.
+      {{t "order.booking_success.after_booking_info_1"}} 
       <br><br>
-      To see or modify your orders / appointments / preferences etc. visit your dashboard.
+      {{t "order.booking_success.after_booking_info_2"}} 
     </div>
   </div>
   <br>
@@ -51,7 +50,7 @@
     <div class="small-12 columns">
       {{#link-to 'home'}}
         <button id="submit_pin" class="button expand drop_off">
-          Go to your dashboard
+          {{t "order.booking_success.visit_dashboard"}} 
         </button>
       {{/link-to}}
     </div>
