--- a/app/templates/order/confirm_booking.hbs
+++ b/app/templates/order/confirm_booking.hbs
@@ -6,7 +6,7 @@
           {{fa-icon "angle-left"}} {{#link-to "order.appointment_details" order.id classNames="back"}}{{t "back"}}{{/link-to}}
         </section>
          <section class="middle tab-bar-section">
-          <h1 class="title">Confirmation</h1>
+          <h1 class="title"> {{t "order.confirm_booking.title"}} </h1>
         </section>
       </nav>
     </section>
@@ -15,7 +15,7 @@
 
 <section class="main-section client-information">
   <div class="small-12 columns type-of-id-text">
-    Submit your Order
+    {{t "order.confirm_booking.submit_order"}}
   </div>
   <br>
   <br>
