--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -108,7 +108,7 @@
               <div class="row">
                 {{!-- <div class="save_button"><i class="fa fa-angle-double-down fa-2x"></i></div> --}}
                 <div class="small-12 medium-12 columns">
-                  <button {{action 'submit' target=form}} class="button expand expand_button">{{t "account.continue"}}</button>
+                  <button {{action 'submit' target=form}} class="button expand expand_button">{{t "continue"}}</button>
                 </div>
               </div>
             {{/validatable-form}}
