--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -13,7 +13,7 @@
           {{/if}}
         </section>
         <section class="middle tab-bar-section">
-          <h1 class="title">Goods Details</h1>
+          <h1 class="title"> {{t "order.goods_details.title"}} </h1>
         </section>
       </nav>
     </section>
@@ -22,8 +22,7 @@
 <br>
 <section class="main-section client-information">
   <div class="small-12 columns id-confidential-text">
-    Please indicate type and quantity of each item needed. <br>
-    We regularly update the categories available based on the items we normally have in our stock. For unusual requirements not listed here please email local@crossroads.org.hk and we will help if we can.
+    {{t "order.goods_details.info_1"}} <br> {{t "order.goods_details.info_2"}}
   </div>
 </section>
 <br>
@@ -34,7 +33,9 @@
     {{/each}}
      <div class='row req-more-goods'>
       <div class='small-2 columns'>&nbsp;</div>
-      <div class='small-6 columns link-blue add_package_link' {{action "addRequest" on="click"}}> Request more goods </div>
+      <div class='small-6 columns link-blue add_package_link' {{action "addRequest" on="click"}}> 
+        {{t "order.goods_details.request_more"}}
+      </div>
       <div class='small-2 columns icon-center'>
         <i class='fa fa-plus-circle fa-2x icon' {{action "addRequest" on="click"}}></i>
       </div>
@@ -43,7 +44,7 @@
     <br>
     <div class="row">
       <div class="small-11 columns">
-        <button {{action 'submit' target=form}} class="button expand expand_button">{{t "account.continue"}}</button>
+        <button {{action 'submit' target=form}} class="button expand expand_button">{{t "continue"}}</button>
       </div>
       <div class='small-1 columns'>&nbsp;</div>
     </div>
