--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -1,51 +1,53 @@
-<div class="row checkout_pages">
-  <div class="small-12 columns">
-    <section class=" login_page">
-      <nav class="tab-bar">
-        <section class="left-large">
-          {{fa-icon "angle-left"}} 
-          {{#if fromClientInformation}}
-            {{#link-to 'order.client_information' order.id classNames="back"}}{{t "back"}}{{/link-to}}
-          {{else if (is-equal backLinkPath 'order.client_information')}}
-            {{#link-to backLinkPath order.id classNames="back"}}{{t "back"}}{{/link-to}}
-          {{else}}
-            {{#link-to backLinkPath classNames="back"}}{{t "back"}}{{/link-to}}
-          {{/if}}
-        </section>
-        <section class="middle tab-bar-section">
-          <h1 class="title">Goods Details</h1>
-        </section>
-      </nav>
-    </section>
+<div class="large-10 columns small-12">
+  <div class="row checkout_pages">
+    <div class="small-12 columns">
+      <section class=" login_page">
+        <nav class="tab-bar">
+          <section class="left-large">
+            {{fa-icon "angle-left"}}
+            {{#if fromClientInformation}}
+              {{#link-to 'order.client_information' order.id classNames="back"}}{{t "back"}}{{/link-to}}
+            {{else if (is-equal backLinkPath 'order.client_information')}}
+              {{#link-to backLinkPath order.id classNames="back"}}{{t "back"}}{{/link-to}}
+            {{else}}
+              {{#link-to backLinkPath classNames="back"}}{{t "back"}}{{/link-to}}
+            {{/if}}
+          </section>
+          <section class="middle tab-bar-section">
+            <h1 class="title">Goods Details</h1>
+          </section>
+        </nav>
+      </section>
+    </div>
   </div>
+  <br>
+  <section class="main-section client-information large-12 columns">
+    <div class="small-12 columns id-confidential-text">
+      Please indicate type and quantity of each item needed. <br>
+      We regularly update the categories available based on the items we normally have in our stock. For unusual requirements not listed here please email local@crossroads.org.hk and we will help if we can.
+    </div>
+  </section>
+  <br>
+  <section class="main-section client-information request-add-remove-section large-12 columns">
+    {{#validatable-form onSubmit=(action 'saveGoodsDetails') as |form|}}
+      {{#each sortedGcRequests as |req index|}}
+        {{add-request id=index order=model request=req num=index}}
+      {{/each}}
+       <div class='row req-more-goods'>
+        <div class='small-2 columns'>&nbsp;</div>
+        <div class='small-6 columns link-blue add_package_link' {{action "addRequest" on="click"}}> Request more goods </div>
+        <div class='small-2 columns icon-center'>
+          <i class='fa fa-plus-circle fa-2x icon' {{action "addRequest" on="click"}}></i>
+        </div>
+        <div class='small-2 columns'>&nbsp;</div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="small-11 columns large-12">
+          <button {{action 'submit' target=form}} class="button expand expand_button">{{t "account.continue"}}</button>
+        </div>
+        <div class='small-1 columns'>&nbsp;</div>
+      </div>
+    {{/validatable-form}}
+  </section>
 </div>
-<br>
-<section class="main-section client-information">
-  <div class="small-12 columns id-confidential-text">
-    Please indicate type and quantity of each item needed. <br>
-    We regularly update the categories available based on the items we normally have in our stock. For unusual requirements not listed here please email local@crossroads.org.hk and we will help if we can.
-  </div>
-</section>
-<br>
-<section class="main-section client-information request-add-remove-section">
-  {{#validatable-form onSubmit=(action 'saveGoodsDetails') as |form|}}
-    {{#each sortedGcRequests as |req index|}}
-      {{add-request id=index order=model request=req num=index}}
-    {{/each}}
-     <div class='row req-more-goods'>
-      <div class='small-2 columns'>&nbsp;</div>
-      <div class='small-6 columns link-blue add_package_link' {{action "addRequest" on="click"}}> Request more goods </div>
-      <div class='small-2 columns icon-center'>
-        <i class='fa fa-plus-circle fa-2x icon' {{action "addRequest" on="click"}}></i>
-      </div>
-      <div class='small-2 columns'>&nbsp;</div>
-    </div>
-    <br>
-    <div class="row">
-      <div class="small-11 columns">
-        <button {{action 'submit' target=form}} class="button expand expand_button">{{t "account.continue"}}</button>
-      </div>
-      <div class='small-1 columns'>&nbsp;</div>
-    </div>
-  {{/validatable-form}}
-</section>
