--- a/app/templates/order/appointment_details.hbs
+++ b/app/templates/order/appointment_details.hbs
@@ -1,4 +1,4 @@
-<div class="large-10 columns small-12">
+<!-- <div class="large-10 columns small-12"> -->
   <div class="row checkout_pages">
     <div class="small-12 columns">
       <section class="main-section new-user-section ui login_page">
@@ -137,4 +137,4 @@
       </div>
     {{/validatable-form}}
   </section>
-</div>
+<!-- </div> -->
