--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -34,8 +34,9 @@
         {{add-request id=index order=model request=req num=index}}
       {{/each}}
        <div class='row req-more-goods'>
-        <div class='small-2 columns'>&nbsp;</div>
-        <div class='small-6 columns link-blue add_package_link' {{action "addRequest" on="click"}}> Request more goods </div>
+        <div class='large-4 columns small-6 columns small-offset-2 link-blue add_package_link' {{action "addRequest" on="click"}}>
+          Request more goods
+        </div>
         <div class='small-2 columns icon-center'>
           <i class='fa fa-plus-circle fa-2x icon' {{action "addRequest" on="click"}}></i>
         </div>
