--- a/app/templates/order/appointment_details.hbs
+++ b/app/templates/order/appointment_details.hbs
@@ -1,4 +1,4 @@
-<!-- <div class="large-10 columns small-12"> -->
+<div class="large-10 columns large-offset-1 small-12">
   <div class="row checkout_pages">
     <div class="small-12 columns">
       <section class="main-section new-user-section ui login_page">
@@ -91,7 +91,7 @@
           {{t 'order.appointment.time'}}
         </div>
         <div class="row time_inputs id-type-radio-input" >
-          <div class="custom_radio_buttons small-4 columns purpose" for="For HKID">
+          <div class="custom_radio_buttons small-4 large-3 columns purpose" for="For HKID">
             {{radio-button
             name="selectTime"
             id="11:00am"
@@ -103,7 +103,7 @@
             </label>
           </div>
 
-          <div class="custom_radio_buttons small-4 columns purpose" for="For asyLum">
+          <div class="custom_radio_buttons small-4 columns large-3 large-offset-1 purpose" for="For asyLum">
             {{radio-button
             name="selectTime"
             id="2:00pm"
@@ -115,7 +115,7 @@
             </label>
           </div>
 
-          <div class="custom_radio_buttons small-4 columns purpose end" for="For asyLum">
+          <div class="custom_radio_buttons small-4 columns large-3 large-offset-1 purpose end" for="For asyLum">
             {{radio-button
             name="selectTime"
             id="3:30pm"
@@ -137,4 +137,4 @@
       </div>
     {{/validatable-form}}
   </section>
-<!-- </div> -->
+</div>
