--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -1,4 +1,4 @@
-<div class="large-10 columns small-12">
+<div class="large-10 columns large-offset-1 small-12">
   <div class="row checkout_pages">
     <div class="small-12 columns">
       <section class=" login_page">
