--- a/app/templates/order/search_code.hbs
+++ b/app/templates/order/search_code.hbs
@@ -1,4 +1,4 @@
-<div class="large-10 columns small-12">
+<div class="large-10 columns large-offset-1 small-12">
   <div class="row fixed_search_header search-box ui items-search">
     <div class="small-3 columns ">
       <a {{action "cancelSearch"}} class="back">
