changed translations and css for goods_details page

--- a/app/styles/templates/_client_information.scss
+++ b/app/styles/templates/_client_information.scss
@@ -111,3 +111,9 @@ div .hk-id{
   padding-bottom: 0.25rem !important;
   width: 96.5%;
 }
+
+.goods_details{
+  a.crossroads_email{
+    text-decoration: underline;
+  }
+}
