--- a/app/templates/components/add-request.hbs
+++ b/app/templates/components/add-request.hbs
@@ -1,14 +1,16 @@
 <section class="new-user-section request-section">
   <div class="request-block">
     <div class="small-12 columns add-request">
-      <div class="small-5 columns ">
+      <div class="small-7 columns ">
+        <label> {{t 'order.goods_details.type_label'}} </label>
         {{#link-to 'order.search_code' order.id (query-params reqId=request.id)}}
           {{#form-control}}
-            {{auto-resize-textarea data-autoresize=true name="packageTypeDescription" value=packageTypeName pattern=".*\S.*" id=(concat 'packageTypeDescription' request.id)}}
+            {{input type="text" name="packageTypeDescription" value=packageTypeName pattern=".*\S.*" id=(concat 'packageTypeDescription' request.id)}}
           {{/form-control}}
         {{/link-to}}
       </div>
-      <div class="small-5 columns">
+      <div class="small-3 columns">
+        <label> {{t 'order.goods_details.quantity_label'}} </label>
         {{#form-control}}
           {{numeric-input id=(concat 'quantity' request.id) name="qty" value=request.quantity maxlength="8" required='true' pattern="\d{1,8}"}}
         {{/form-control}}
@@ -21,6 +23,7 @@
   <div class="row">
     <div class="small-12 columns">
       <div class="small-10 columns req-description">
+        <label> {{t 'order.goods_details.description_details_label'}} </label>
         {{#form-control}}
           {{input type="text" id=(concat 'description' request.id) name="otherDetails" value=request.description classNames="number_input center_align_placeholder"}}
         {{/form-control}}
