--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -22,8 +22,8 @@
   </div>
   <br>
   <section class="main-section client-information large-12 columns">
-    <div class="small-12 columns id-confidential-text">
-      {{t "order.goods_details.info_1"}} <br> {{t "order.goods_details.info_2"}}
+    <div class="small-12 columns id-confidential-text goods_details">
+      {{t "order.goods_details.info_1"}} <br> {{t "order.goods_details.info_2"}} <a class="crossroads_email" href="mailto:{{unbound email}}"> local@crossroads.org.hk </a> {{t "order.goods_details.info_3"}}
     </div>
   </section>
   <br>
