fix req add and remove click for ios safari

--- a/app/styles/templates/_client_information.scss
+++ b/app/styles/templates/_client_information.scss
@@ -116,11 +116,12 @@ div .hk-id{
   a.crossroads_email{
     text-decoration: underline;
   }
-  .request-add-remove-section{
-    .req-more-goods {
-      div.add_more_request{
-        cursor: pointer !important;
-      }
+}
+
+.request-add-remove-section{
+  .req-more-goods {
+    .add_more_request{
+      cursor: pointer;
     }
   }
 }
