--- a/app/styles/components/_add-request.scss
+++ b/app/styles/components/_add-request.scss
@@ -25,6 +25,9 @@
   .remove-request{
     color: #f34d4f;
   }
+  .remove-request-click{
+    cursor: pointer;
+  }
 }
 
 .req-more-goods div.link-blue, .req-more-goods div.icon-center{
