--- a/app/templates/components/add-request.hbs
+++ b/app/templates/components/add-request.hbs
@@ -9,7 +9,7 @@
           {{/form-control}}
         {{/link-to}}
       </div>
-      <div class="small-3 columns">
+      <div class="small-3 columns remove-request-click">
         <label> {{t 'order.goods_details.quantity_label'}} </label>
         {{#form-control}}
           {{numeric-input id=(concat 'quantity' request.id) name="qty" value=request.quantity maxlength="8" required='true' pattern="\d{1,8}"}}
