--- a/app/templates/order/appointment_details.hbs
+++ b/app/templates/order/appointment_details.hbs
@@ -1,140 +1,143 @@
-<div class="large-10 columns large-offset-1 small-12">
-  <div class="row checkout_pages">
-    <div class="small-12 columns">
-      <section class="main-section new-user-section ui login_page">
-        <nav class="tab-bar">
-          <section class="left-large">
-            {{fa-icon "angle-left"}} {{#link-to 'order.goods_details' order.id classNames="back"}}{{t "back"}}{{/link-to}}
-          </section>
-           <section class="middle tab-bar-section">
-            <h1 class="title"> {{t 'order.appointment.title'}} </h1>
-          </section>
-        </nav>
-      </section>
+<div class="row">
+  <div class="large-12 columns medium-12 small-12">
+    <div class="row checkout_pages">
+      <div class="small-12">
+        <section class="main-section new-user-section ui login_page">
+          <nav class="tab-bar">
+            <section class="left-large">
+              {{fa-icon "angle-left"}} {{#link-to 'order.goods_details' order.id classNames="back"}}{{t "back"}}{{/link-to}}
+            </section>
+             <section class="middle tab-bar-section">
+              <h1 class="title"> {{t 'order.appointment.title'}} </h1>
+            </section>
+          </nav>
+        </section>
+
+        <section class="main-section client-information large-10 large-offset-1 medium-10 medium-offset-1 columns">
+          {{#validatable-form onSubmit=(action 'saveTransportDetails') as |form|}}
+            <div class="small-12 columns type-of-id-text">
+              {{t 'order.appointment.transport'}}
+            </div>
+            <div class="row time_inputs id-type-radio-input" >
+              <div class=" custom_radio_buttons small-12 columns purpose col-width-appointment" for="For HKID">
+                {{radio-button
+                name="selectReason"
+                id="self"
+                value="self"
+                selection=selectedId
+                required='true'}}
+                <label class="radio-button-text align-text">
+                  {{t 'order.appointment.self_vehicle'}}
+                </label>
+              </div>
+
+              <div class=" custom_radio_buttons small-12 columns purpose col-width-appointment end" for="For asyLum">
+                {{radio-button
+                name="selectReason"
+                id="ggv"
+                value="ggv"
+                selection=selectedId
+                required='true'}}
+                <label class="radio-button-text align-text">
+                  {{t 'order.appointment.hire_vehicle'}}
+                </label>
+              </div>
+            </div>
+            <br>
+
+            <div class="small-12 columns type-of-id-text">
+              {{t 'order.appointment.confirm_labor'}}
+            </div>
+
+            <div class="small-12 columns id-confidential-text">
+              {{t 'order.appointment.labor_info'}}
+            </div>
+            <div class="row time_inputs id-type-radio-input" >
+              <div class='checkbox custom_radio_buttons small-12 columns purpose col-width-appointment'>
+                {{input type="checkbox" name="labor" checked=false id='4' required=true}}
+                <label class="radio-button-text  align-text" for='4'>
+                <span> {{t 'order.appointment.labor_confirmation'}} </span>
+                </label>
+              </div>
+            </div>
+            <br>
+
+            <div class="row">
+              <div class="small-12 columns type-of-id-text">
+                {{t 'order.appointment.date'}}
+              </div>
+            </div>
+
+            <div class="row time_inputs id-type-radio-input appointment-date">
+                <div class="checkbox small-12 columns date_selector">
+                  {{select-date
+                    name='selectedDate'
+                    id='selectedDate'
+                    value=''
+                    required='true'
+                    available=available_dates
+                    class="date-picker-appointment"
+                    selection=selectedDate
+                    placeholder=datePrompt
+                    pattern="[a-zA-Z]{3}\s?[a-zA-Z]{3}\s?[0-9]{1,2}"}}
+                  <i class="fa fa-calendar calender_icon"></i>
+                </div>
+            </div>
+
+            <br>
+
+            {{#if selectedDate}}
+              <div class="small-12 columns type-of-id-text">
+                {{t 'order.appointment.time'}}
+              </div>
+              <div class="row time_inputs id-type-radio-input time-slots" >
+                <div class="custom_radio_buttons small-3 large-3 medium-3 columns" for="For HKID">
+                  {{radio-button
+                  name="selectTime"
+                  id="11:00am"
+                  value="11:00am"
+                  selection=selectedTimeId
+                  required='true'}}
+                  <label class="radio-button-text align-text">
+                    11:00am
+                  </label>
+                </div>
+
+                <div class="custom_radio_buttons small-3 small-offset-1 columns large-3 large-offset-1 medium-3 medium-offset-1" for="For asyLum">
+                  {{radio-button
+                  name="selectTime"
+                  id="2:00pm"
+                  value="2:00pm"
+                  selection=selectedTimeId
+                  required='true'}}
+                  <label class="radio-button-text align-text">
+                    2:00pm
+                  </label>
+                </div>
+
+                <div class="custom_radio_buttons small-3 small-offset-1 columns large-3 large-offset-1 medium-3 medium-offset-1 end" for="For asyLum">
+                  {{radio-button
+                  name="selectTime"
+                  id="3:30pm"
+                  value="3:30pm"
+                  selection=selectedTimeId
+                  required='true'}}
+                  <label class="radio-button-text align-text">
+                    3:30pm
+                  </label>
+                </div>
+                <br>
+              </div>
+              <br>
+            {{/if}}
+            <div class="row">
+              <div class="small-12 columns">
+                <a {{action 'submit' target=form}} class="button expand"> {{t 'continue'}} </a>
+              </div>
+            </div>
+          {{/validatable-form}}
+        </section>
+      </div>
     </div>
   </div>
-
-  <section class="main-section client-information">
-    {{#validatable-form onSubmit=(action 'saveTransportDetails') as |form|}}
-      <div class="small-12 columns type-of-id-text">
-        {{t 'order.appointment.transport'}}
-      </div>
-      <div class="row time_inputs id-type-radio-input" >
-        <div class=" custom_radio_buttons small-12 columns purpose" for="For HKID">
-          {{radio-button
-          name="selectReason"
-          id="self"
-          value="self"
-          selection=selectedId
-          required='true'}}
-          <label class="radio-button-text align-text">
-            {{t 'order.appointment.self_vehicle'}}
-          </label>
-        </div>
-
-        <div class=" custom_radio_buttons small-12 columns purpose end" for="For asyLum">
-          {{radio-button
-          name="selectReason"
-          id="ggv"
-          value="ggv"
-          selection=selectedId
-          required='true'}}
-          <label class="radio-button-text align-text">
-            {{t 'order.appointment.hire_vehicle'}}
-          </label>
-        </div>
-      </div>
-      <br>
-
-      <div class="small-12 columns type-of-id-text">
-        {{t 'order.appointment.confirm_labor'}}
-      </div>
-
-      <div class="small-12 columns id-confidential-text">
-        {{t 'order.appointment.labor_info'}}
-      </div>
-      <div class="row time_inputs id-type-radio-input" >
-        <div class='checkbox custom_radio_buttons small-12 columns purpose'>
-          {{input type="checkbox" name="labor" checked=false id='4' required=true}}
-          <label class="radio-button-text  align-text" for='4'>
-          <span> {{t 'order.appointment.labor_confirmation'}} </span>
-          </label>
-        </div>
-      </div>
-      <br>
-
-      <div class="row">
-        <div class="small-12 columns type-of-id-text">
-          {{t 'order.appointment.date'}}
-        </div>
-      </div>
-
-      <div class="row time_inputs id-type-radio-input appointment-date">
-          <div class="checkbox small-12 columns date_selector">
-            {{select-date
-              name='selectedDate'
-              id='selectedDate'
-              value=''
-              required='true'
-              available=available_dates
-              selection=selectedDate
-              placeholder=datePrompt
-              pattern="[a-zA-Z]{3}\s?[a-zA-Z]{3}\s?[0-9]{1,2}"}}
-            <i class="fa fa-calendar calender_icon"></i>
-          </div>
-      </div>
-
-      <br>
-
-      {{#if selectedDate}}
-        <div class="small-12 columns type-of-id-text">
-          {{t 'order.appointment.time'}}
-        </div>
-        <div class="row time_inputs id-type-radio-input" >
-          <div class="custom_radio_buttons small-4 large-3 columns purpose" for="For HKID">
-            {{radio-button
-            name="selectTime"
-            id="11:00am"
-            value="11:00am"
-            selection=selectedTimeId
-            required='true'}}
-            <label class="radio-button-text align-text">
-              11:00am
-            </label>
-          </div>
-
-          <div class="custom_radio_buttons small-4 columns large-3 large-offset-1 purpose" for="For asyLum">
-            {{radio-button
-            name="selectTime"
-            id="2:00pm"
-            value="2:00pm"
-            selection=selectedTimeId
-            required='true'}}
-            <label class="radio-button-text align-text">
-              2:00pm
-            </label>
-          </div>
-
-          <div class="custom_radio_buttons small-4 columns large-3 large-offset-1 purpose end" for="For asyLum">
-            {{radio-button
-            name="selectTime"
-            id="3:30pm"
-            value="3:30pm"
-            selection=selectedTimeId
-            required='true'}}
-            <label class="radio-button-text align-text">
-              3:30pm
-            </label>
-          </div>
-          <br>
-        </div>
-        <br>
-      {{/if}}
-      <div class="row">
-        <div class="small-12 columns">
-          <a {{action 'submit' target=form}} class="button expand"> {{t 'continue'}} </a>
-        </div>
-      </div>
-    {{/validatable-form}}
-  </section>
 </div>
