--- a/app/templates/order/booking_success.hbs
+++ b/app/templates/order/booking_success.hbs
@@ -1,58 +1,60 @@
-<div class="row checkout_pages">
-  <div class="small-12 columns">
-    <section class="main-section new-user-section ui login_page">
-      <nav class="tab-bar">
-        <section class="middle tab-bar-section">
-          <h1 class="title"> {{t "order.booking_success.success"}} </h1>
-        </section>
-      </nav>
-    </section>
+<div class="row">
+  <div class="row checkout_pages">
+    <div class="small-12 large-12 middle-12 columns">
+      <section class="main-section new-user-section ui login_page">
+        <nav class="tab-bar">
+          <section class="middle tab-bar-section">
+            <h1 class="title"> {{t "order.booking_success.success"}} </h1>
+          </section>
+        </nav>
+      </section>
+
+      <section class="main-section client-information large-10 medium-10 large-offset-1 medium-offset-1">
+        <div class="small-12 columns type-of-id-text">
+          {{t "order.booking_success.reference_number"}}
+        </div>
+        <br>
+        <div class="row time_inputs id-type-radio-input" >
+          <div class=" custom_radio_buttons small-12  large-4 columns purpose" for="For HKID">
+            {{model.code}}
+          </div>
+        </div>
+
+        <div class="small-12 medium-9 large-4 columns type-of-id-text large-10 medium-10 large-offset-1 medium-offset-1">
+          {{t "order.booking_success.status"}}
+        </div>
+        <br>
+
+        <div class="row time_inputs id-type-radio-input" >
+          <div class=" custom_radio_buttons small-12  large-4 columns purpose" for="For HKID">
+            {{model.state}}
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="small-12 columns type-of-id-text">
+            {{t "order.booking_success.what_happen_after_booking"}}
+          </div>
+
+          <div class="small-12 columns id-confidential-text">
+            {{t "order.booking_success.after_booking_info_1"}}
+            <br><br>
+            {{t "order.booking_success.after_booking_info_2"}}
+          </div>
+        </div>
+        <br>
+        <br>
+
+        <div class="row">
+          <div class="small-12 columns">
+            {{#link-to 'home'}}
+              <button id="submit_pin" class="button expand drop_off">
+                {{t "order.booking_success.visit_dashboard"}}
+              </button>
+            {{/link-to}}
+          </div>
+        </div>
+      </section>
+    </div>
   </div>
 </div>
-
-<section class="main-section client-information">
-  <div class="small-12 columns type-of-id-text">
-    {{t "order.booking_success.reference_number"}} 
-  </div>
-  <br>
-  <div class="row time_inputs id-type-radio-input" >
-    <div class=" custom_radio_buttons small-12  large-4 columns purpose" for="For HKID">
-      {{model.code}}
-    </div>
-  </div>
-
-  <div class="small-12 medium-9 large-4 columns type-of-id-text">
-    {{t "order.booking_success.status"}} 
-  </div>
-  <br>
-
-  <div class="row time_inputs id-type-radio-input" >
-    <div class=" custom_radio_buttons small-12  large-4 columns purpose" for="For HKID">
-      {{model.state}}
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="small-12 columns type-of-id-text">
-      {{t "order.booking_success.what_happen_after_booking"}} 
-    </div>
-
-    <div class="small-12 columns id-confidential-text">
-      {{t "order.booking_success.after_booking_info_1"}} 
-      <br><br>
-      {{t "order.booking_success.after_booking_info_2"}} 
-    </div>
-  </div>
-  <br>
-  <br>
-
-  <div class="row">
-    <div class="small-12 columns">
-      {{#link-to 'home'}}
-        <button id="submit_pin" class="button expand drop_off">
-          {{t "order.booking_success.visit_dashboard"}} 
-        </button>
-      {{/link-to}}
-    </div>
-  </div>
-</section>
