fix add req for safari

--- a/app/styles/templates/_client_information.scss
+++ b/app/styles/templates/_client_information.scss
@@ -119,9 +119,9 @@ div .hk-id{
     text-decoration: underline;
   }
 }
-
+ 
 .request-add-remove-section{
-  .req-more-goods .add_more_request, .req-more-goods .add_more_request i {
+  .req-more-goods .add_more_request {
     cursor: pointer;
   }
 }
