--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -32,10 +32,10 @@
               {{add-request id=index order=model request=req num=index}}
             {{/each}}
              <div class='row req-more-goods'>
-              <div class='large-4 columns small-7 small-offset-2 request-more link-blue add_package_link' {{action "addRequest" on="click"}}>
+              <div class='large-4 columns small-7 small-offset-2 request-more link-blue add_package_link add_more_request' {{action "addRequest" on="click"}}>
                 {{t "order.goods_details.request_more"}}
               </div>
-              <div class='small-2 columns icon-center'>
+              <div class='small-2 columns icon-center add_more_request'>
                 <i class='fa fa-plus-circle fa-2x icon' {{action "addRequest" on="click"}}></i>
               </div>
               <div class='small-2 columns'>&nbsp;</div>
