--- a/app/templates/order/booking_success.hbs
+++ b/app/templates/order/booking_success.hbs
@@ -15,19 +15,20 @@
         </div>
         <br>
         <div class="row time_inputs id-type-radio-input" >
-          <div class=" custom_radio_buttons small-12  large-4 columns purpose" for="For HKID">
+          <div class=" custom_radio_buttons small-12 columns booking-success" align="center" for="For HKID">
             {{model.code}}
           </div>
         </div>
 
-        <div class="small-12 medium-9 large-4 columns type-of-id-text large-10 medium-10 large-offset-1 medium-offset-1">
+        <div class="small-12 columns type-of-id-text">
           {{t "order.booking_success.status"}}
         </div>
         <br>
 
         <div class="row time_inputs id-type-radio-input" >
-          <div class=" custom_radio_buttons small-12  large-4 columns purpose" for="For HKID">
-            {{model.state}}
+          <div class=" custom_radio_buttons small-12 columns booking-success success-submit" align="center" for="For HKID">
+            <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
+            <span submit-state>{{model.state}}</span>
           </div>
         </div>
 
