--- a/app/templates/order/booking_success.hbs
+++ b/app/templates/order/booking_success.hbs
@@ -27,8 +27,10 @@
 
         <div class="row time_inputs id-type-radio-input" >
           <div class=" custom_radio_buttons small-12 columns booking-success success-submit" align="center" for="For HKID">
-            <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-            <span submit-state>{{model.state}}</span>
+            <span>
+              <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
+              <span submit-state>{{model.state}}</span>
+            </span>
           </div>
         </div>
 
