--- a/app/styles/_request_purpose.scss
+++ b/app/styles/_request_purpose.scss
@@ -103,8 +103,16 @@
         margin: 0 0 0 0px;
       }
       label {
-        font-size: 0.8rem !important;
-        margin-top: 0.4rem !important;
+        @media #{$large-only}{
+          font-size: 0.8rem !important;
+          margin-top: 0.4rem !important;
+        }
+        @media #{$small-only}{
+          margin-left: 0 !important;
+          margin-right: 0 !important;
+          font-size: 0.6rem !important;
+          margin-top: 0.4rem !important;
+        }
       }
     }
   }
