--- a/app/templates/my_orders.hbs
+++ b/app/templates/my_orders.hbs
@@ -16,10 +16,7 @@
             {{/link-to}}
           </div>
           <div class="columns button-container small-6">
-            <div class="button light">
-              <i class="fa fa-calendar" aria-hidden="true"></i>
-              {{t 'home.visit.action'}}
-            </div>
+            {{partial 'book_appointment_button'}}
           </div>
         </div>
         <ul class="list list-items">
