--- a/app/templates/order/client_information.hbs
+++ b/app/templates/order/client_information.hbs
@@ -31,7 +31,7 @@
                   value="hkId"
                   selection=selectedId
                   required='true'}}
-                <label class="radio-button-text align-text">
+                <label class="radio-button-text align-text" for="hkId">
                   {{t 'order.client_information.hk_id'}}
                 </label>
               </div>
@@ -43,7 +43,7 @@
                   value="abcl"
                   selection=selectedId
                   required='true'}}
-                <label class="radio-button-text align-text">
+                <label class="radio-button-text align-text" for="abcl">
                   {{t 'order.client_information.asrf_id'}}
                 </label>
               </div>
