--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -20,25 +20,25 @@
                   {{t 'order.request_purpose.purpose'}}
                 </div>
                 <div class="row time_inputs purpose" >
-                  <div class=" custom_radio_buttons small-12 columns purpose" for="For organisation's own purpose">
+                  <div class=" custom_radio_buttons small-12 columns purpose">
                     {{radio-button
                     name="selectReason"
                     id="1"
                     value="organisation"
                     selection=selectedId
                     required='true'}}
-                    <label class="radio-button-text align-text">
+                    <label class="radio-button-text align-text" for="1">
                       {{t 'order.request_purpose.for_organisation'}}
                     </label>
                   </div>
-                  <div class=" custom_radio_buttons small-12 columns purpose end" for="For benificiery">
+                  <div class=" custom_radio_buttons small-12 columns purpose end">
                       {{radio-button
                       name="selectReason"
                       id="2"
                       value="client"
                       selection=selectedId
                       required='true'}}
-                    <label class="radio-button-text align-text">
+                    <label class="radio-button-text align-text" for="2">
                       {{t 'order.request_purpose.for_client'}}
                     </label>
                   </div>
