fix nested component issue and css for error

--- a/app/styles/components/_add-request.scss
+++ b/app/styles/components/_add-request.scss
@@ -20,6 +20,10 @@
   .req-description input {
     margin-top: 0.1rem;
   }
+  div .warning_empty{
+    width: 80%;
+    margin-top: -1rem;
+  }
 }
 
 .req-more-goods{
@@ -49,3 +53,4 @@
     margin-left: 1rem;
   }
 }
+
