--- a/app/styles/_request_purpose.scss
+++ b/app/styles/_request_purpose.scss
@@ -19,7 +19,7 @@
 
     @media #{$medium-only} {
       float: left !important;
-      width: 100% !important;
+      width: 100%;
       margin-left: 0rem !important;
     }
   }
