create an action to set query params and redirect to package

--- a/app/templates/cart_content/_full_view.hbs
+++ b/app/templates/cart_content/_full_view.hbs
@@ -25,7 +25,7 @@
 
     {{#each cart.content as |record|}}
         <li>
-          <div class="row">
+          <div class="row" {{action 'updateCartItemParams' record.id}}>
             <div class="small-3 columns">
               {{#link-to 'package' record.id (query-params sortBy=sortBy categoryId=category) disabled=(is-not record.available) class="cart-redirect-link"}}
                 <img class="thumb-image {{unless record.available 'grayed-image'}}" src="{{record.imageUrl}}" />
