show slots as per dates

--- a/app/templates/order/appointment_details.hbs
+++ b/app/templates/order/appointment_details.hbs
@@ -83,52 +83,27 @@
                   <i class="fa fa-calendar calender_icon"></i>
                 </div>
             </div>
-
+            
             <br>
-
             {{#if selectedDate}}
               <div class="small-12 columns type-of-id-text">
                 {{t 'order.appointment.time'}}
               </div>
-              <div class="row time_inputs id-type-radio-input time-slots" >
-                <div class="custom_radio_buttons small-3 large-3 medium-3 columns">
-                  {{radio-button
-                  name="selectTime"
-                  id="11:00am"
-                  value="11:00am"
-                  selection=selectedTimeId
-                  required='true'}}
-                  <label class="radio-button-text align-text" for="11:00am">
-                    11:00am
-                  </label>
+              {{#each timeSlots as |time|}}
+                <div class="row time_inputs id-type-radio-input time-slots" >
+                  <div class="custom_radio_buttons small-3 large-3 medium-3 columns">
+                    {{radio-button
+                    name="selectTime"
+                    id=time
+                    value=time
+                    selection=selectedTimeId
+                    required='true'}}
+                    <label class="radio-button-text align-text" for={{time}}>
+                      {{time}}
+                    </label>
+                  </div>
                 </div>
-
-                <div class="custom_radio_buttons small-3 small-offset-1 columns large-3 large-offset-1 medium-3 medium-offset-1">
-                  {{radio-button
-                  name="selectTime"
-                  id="2:00pm"
-                  value="2:00pm"
-                  selection=selectedTimeId
-                  required='true'}}
-                  <label class="radio-button-text align-text" for="2:00pm">
-                    2:00pm
-                  </label>
-                </div>
-
-                <div class="custom_radio_buttons small-3 small-offset-1 columns large-3 large-offset-1 medium-3 medium-offset-1 end">
-                  {{radio-button
-                  name="selectTime"
-                  id="3:30pm"
-                  value="3:30pm"
-                  selection=selectedTimeId
-                  required='true'}}
-                  <label class="radio-button-text align-text" for="3:30pm">
-                    3:30pm
-                  </label>
-                </div>
-                <br>
-              </div>
-              <br>
+              {{/each}}
             {{/if}}
             <div class="row">
               <div class="small-12 columns">
