--- a/app/templates/order/booking_success.hbs
+++ b/app/templates/order/booking_success.hbs
@@ -50,7 +50,7 @@
 
         <div class="row">
           <div class="small-12 columns">
-            {{#link-to 'home'}}
+            {{#link-to 'my_orders'}}
               <button id="submit_pin" class="button expand drop_off">
                 {{t "order.booking_success.visit_dashboard"}}
               </button>
