fix timeslots css

--- a/app/templates/order/appointment_details.hbs
+++ b/app/templates/order/appointment_details.hbs
@@ -89,23 +89,23 @@
               <div class="small-12 columns type-of-id-text">
                 {{t 'order.appointment.time'}}
               </div>
-              {{#each timeSlots as |time|}}
-                {{#unless time.isClosed}}
-                  <div class="row time_inputs id-type-radio-input time-slots" >
-                    <div class="custom_radio_buttons small-3 large-3 medium-3 columns">
-                      {{radio-button
-                      name="selectTime"
-                      id=time.timestamp
-                      value=time.timestamp
-                      selection=selectedTimeId
-                      required='true'}}
-                      <label class="radio-button-text align-text" for={{time.timestamp}}>
-                        {{display-time time.timestamp "HH:mm"}}
-                      </label>
-                    </div>
-                  </div>
-                {{/unless}}
-              {{/each}}
+              <div class="row time_inputs id-type-radio-input time-slots" >
+                {{#each timeSlots as |time|}}
+                  {{#unless time.isClosed}}
+                      <div class="custom_radio_buttons small-4 large-3 medium-3 columns end">
+                        {{radio-button
+                        name="selectTime"
+                        id=time.timestamp
+                        value=time.timestamp
+                        selection=selectedTimeId
+                        required='true'}}
+                        <label class="radio-button-text align-text" for={{time.timestamp}}>
+                          {{display-time time.timestamp "HH:mm"}}
+                        </label>
+                      </div>
+                  {{/unless}}
+                {{/each}}
+              </div>
             {{/if}}
             <div class="row">
               <div class="small-12 columns">
