FIX: My orders appointment button redirects properly (#240)
* FIX: My orders appointment button redirects properly

* Update: Circle CI test output

--- a/app/templates/my_orders.hbs
+++ b/app/templates/my_orders.hbs
@@ -16,10 +16,12 @@
             {{/link-to}}
           </div>
           <div class="columns button-container small-6">
-            <div class="button light">
-              <i class="fa fa-calendar" aria-hidden="true"></i>
-              {{t 'home.visit.action'}}
-            </div>
+            {{#link-to "request_purpose"}}
+              <div class="button light">
+                <i class="fa fa-calendar"></i>
+                {{ t "home.visit.action" }}
+              </div>
+            {{/link-to}}
           </div>
         </div>
         <ul class="list list-items">
