--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -27,7 +27,7 @@
                     value="organisation"
                     selection=selectedId
                     required='true'}}
-                    <label class="radio-button-text align-text" for="1">
+                    <label class="radio-button-text for-organisation align-text" for="1">
                       {{t 'order.request_purpose.for_organisation'}}
                     </label>
                   </div>
@@ -38,7 +38,7 @@
                       value="client"
                       selection=selectedId
                       required='true'}}
-                    <label class="radio-button-text align-text" for="2">
+                    <label class="radio-button-text for-client align-text" for="2">
                       {{t 'order.request_purpose.for_client'}}
                     </label>
                   </div>
@@ -49,7 +49,7 @@
                   </div>
                   <div class="people-count-input">
                     {{#form-control}}
-                      {{input type='number' value=peopleCount required='true'}}
+                      {{input type='number' value=peopleCount required='true' id="people-count"}}
                       <div class='input-error'> {{t 'order.request_purpose.people_count_warning'}} </div>
                     {{/form-control}}
                   </div>
